k8s/templates/structure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insights-api-dev
  namespace: sandbox-isemichastnov
  labels:
    app.kubernetes.io/name: insights-api
    app.kubernetes.io/instance: insights-api-dev
    app.kubernetes.io/version: @project.version@
    stage: dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: insights-api
      app.kubernetes.io/instance: insights-api-dev
      app.kubernetes.io/version: @project.version@
      #TODO other labels (stage)?
  replicas: 2
  #TODO affinity/antiAffinity?
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: insights-api
        app.kubernetes.io/instance: insights-api-dev
        app.kubernetes.io/version: @project.version@
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8625'
        prometheus.io/path: /insights-api/actuator/prometheus
    spec:
      containers:
        - name: insights-api
          image: nexus.kontur.io:8085/konturdev/insights-api:@project.version@ #replaced with actual version by maven
          imagePullPolicy: Always #don't use Always for local minikube - otherwise it tries reloading from remote
          readinessProbe:
            httpGet:
              path: /insights-api/actuator/health/readiness
              port: 8625
            failureThreshold: 1 #todo test
            periodSeconds: 60 #todo longer?
            initialDelaySeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: insights-api-dev
  namespace: sandbox-isemichastnov
  labels:
    app.kubernetes.io/name: insights-api
    app.kubernetes.io/instance: insights-api-dev
    stage: dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: insights-api
    app.kubernetes.io/instance: insights-api-dev
    #TODO other labels (stage)?
  ports:
    - port: 8625
      targetPort: 8625
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: insights-api-dev-database
  namespace: sandbox-isemichastnov
  labels:
    app.kubernetes.io/name: insights-api-database
    app.kubernetes.io/instance: insights-api-dev-database
    stage: dev
spec:
  type: ExternalName
  externalName: milan.k8s-01.kontur.io.
#  externalName: docker.for.mac.host.internal #todo for local dev
  ports:
    - port: 5432
---
