k8s/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ilya-k8s-01-konturlabs-com
  namespace: sandbox-isemichastnov
  labels:
    app.kubernetes.io/name: insights-api
    app.kubernetes.io/instance: insights-api-dev
  annotations:
    cert-manager.io/issuer: letsencrypt-production #use letsencrypt-staging for testing
spec:
  tls:
    - hosts:
        - dev-ilya.k8s-01.konturlabs.com
      secretName: dev-ilya-k8s-01-konturlabs-com-tls
  ingressClassName: nginx
  rules:
    - host: dev-ilya.k8s-01.konturlabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: insights-api-dev
                port:
                  number: 8625
---
